<resources>
    <string name="app_name">FinalProject</string>
    <string name="_0">btn0</string>
    <string name="_SignUp">SignUp</string>
    <string name="_Sign_Up">Sign_Up</string>
    <string name="Login">Login</string>
    <string name="_Create_Account">Create_Account</string>
    <string name="_Sign_Up_As_Admin">Sign_Up_As_Admin</string>
    <string name="Sign_Up_As_Admin">Sign_Up_As_Admin</string>
    <string name="Sign_Up_As_Student">Sign_Up_As_Student</string>
    <string name="Sign_Up_As_Instructor">Sign_Up_As_Instructor</string>
    <string name="Submit">Submit</string>
    <string name="Log_In_As_Admin">Log_In_As_Admin</string>
    <string name="Log_In_As_Student">Log_In_As_Student</string>
    <string name="Log_In_As_Instructor">Log_In_As_Instructor</string>
    <string name="title_activity_log_in_admin">LogInAdmin</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="Log_In">Log_In</string>
    <string name="View_ALL_Admin">View_All_Admin</string>
    <string name="View_ALL_Students">View_ALL_Students</string>
    <string name="View_ALL_Instructors">View_ALL_Instructors</string>
    <string name="View_ALL_Classes">View_ALL_Classes</string>
    <string name="Create_Class">Create_Class</string>
    <string name="Change_Class_Name">ChangeClassName</string>
    <string name="Change_Class_Code">ChangeClassCode</string>
    <string name="Delete_Student">DeleteStudent</string>
    <string name="Delete_Admin">DeleteAdmin</string>
    <string name="Delete_Class">DeleteClass</string>
    <string name="Delete_Instructor">Delete_Instructor</string>
    <string name="Search_Class">Search_Class</string>
    <string name="Assign_To_Class">Assign_To_Class</string>
    <string name="Unassign_From_Class">Unassign_From_Class</string>
    <string name="Set_New_Course_Days">Set_New_Course_Days</string>
    <string name="Set_New_Course_Hours">Set_New_Course_Hours</string>
    <string name="Set_New_Capacity">Set_New_Capacity</string>
</resources>